添加模拟对象断言

--- a/LogAnTest/LogAn/LogAn.csproj
+++ b/LogAnTest/LogAn/LogAn.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IWebService.cs" />
     <Compile Include="LogAnalyzer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
