--- a/LogAnTest/LogAn.UnitTests/LogAn.UnitTests.csproj
+++ b/LogAnTest/LogAn.UnitTests/LogAn.UnitTests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeWebService.cs" />
     <Compile Include="LogAnalyzerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
