添加同时使用存根和模拟对象的demo，但测试没通过

--- a/LogAnTest/LogAn.UnitTests/LogAn.UnitTests.csproj
+++ b/LogAnTest/LogAn.UnitTests/LogAn.UnitTests.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeEmailService.cs" />
     <Compile Include="FakeWebService.cs" />
+    <Compile Include="LogAnalyzer2Tests.cs" />
     <Compile Include="LogAnalyzerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
