--- a/LogAnTest/LogAn/LogAn.csproj
+++ b/LogAnTest/LogAn/LogAn.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="EmailInfo.cs" />
     <Compile Include="IEmailService.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="IWebService.cs" />
     <Compile Include="LogAnalyzer2.cs" />
     <Compile Include="LogAnalyzer.cs" />
