--- a/LogAnTest/LogAn/LogAn.csproj
+++ b/LogAnTest/LogAn/LogAn.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IWebService.cs" />
     <Compile Include="LogAnalyzer2.cs" />
     <Compile Include="LogAnalyzer.cs" />
+    <Compile Include="Presenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
